# agora-os

./: .gitignore  AGENTS.md  README.md  agents-project.md  audit-service  go.mod
cmd/admin-agent/: main.go
cmd/agent-sim/: main.go
cmd/agent-supervisor/: main.go
cmd/agentctl/: main.go
cmd/ambassador/: main.go
cmd/audit-ebpf/: Cargo.toml  Makefile  build.rs  lib.rmeta
cmd/audit-ebpf/audit-ebpf-common/: Cargo.toml
cmd/audit-ebpf/audit-ebpf-common/src/: lib.rs
cmd/audit-ebpf/audit-ebpf-ebpf/: Cargo.toml
cmd/audit-ebpf/audit-ebpf-ebpf/src/: lib.rs
cmd/audit-ebpf/src/: bus.rs  guard_test.rs  main.rs
cmd/audit-service/: broker.go  broker_test.go  main.go
cmd/compositor-bridge/: main.go
cmd/compositorctl/: layout.go  main.go  main_test.go  shell.go
cmd/event-bus/: main.go
cmd/event-bus-web/: main.go  main_test.go
cmd/isolation-service/: main.go
cmd/repo-inspector/: main.go  main_test.go
cmd/repo-search/: main.go  main_test.go
cmd/webview-launcher/: main.go
compositor/wayfire-plugin/: README.md  meson.build
compositor/wayfire-plugin/metadata/: agora-bridge.xml
compositor/wayfire-plugin/src/: plugin.cpp  policy_cache.hpp  protocol.hpp
compositor/wayfire-plugin/tests/: protocol_smoke.cpp
config/: admin-agent-system-prompt.md  default-nftables.conf
deploy/den-k8plus/: README.md  agora-deploy  agora-shell-panel-supervisor  agora-shell-panel.service  agora-wayfire.service  compositor-bridge.service  event-bus-web.service  event-bus.service  native-shell-dock  wayfire.ini
internal/admin/: agent.go  agent_test.go
internal/agent/: agent.go  agent_test.go  manager.go  nftables.go  systemd.go
internal/agentsim/: all_scenarios_test.go  brain.go  dennimo_defaults_test.go  deterministic_brain.go  empirical_scenarios_test.go  integration_test.go  ollama_brain.go  ollama_brain_test.go  openai_brain.go  openai_brain_test.go  qwen_brevity_test.go  qwen_endpoint_test.go  runner.go  runner_test.go  smoke_script_test.go
internal/ambassador/: ambassador.go  ambassador_test.go  supervisor.go  turn.go
internal/appcatalog/: catalog.go  catalog_test.go  desktop_import.go  desktop_import_test.go
internal/audit/: broker.go  broker_test.go  service.go
internal/bus/: agent_message.go  agent_message_test.go  broker.go  broker_test.go  client.go  client_test.go  match.go  match_test.go  protocol.go  provenance.go  provenance_test.go  (+2 more)
research/: 3po-r2.md  agent-slot-inventory.md  agent-supervisor.md  compositor-decision.md  event-bus-sender-identity.md  idea.md  local-agents.md  phases.md  plan.md  research.md  webview-inbox-policy.md
scripts/: README.md  asha_agora_control_proof.py  asha_voxel_interaction_proof.py  bootstrap-3po.sh  buildvmlogged.sh  provision-phase2-vm.sh  provision-phase4-ebpf.sh  split_shell_live_canary.py  vm.sh
shell/: README.md  embed.go  package-lock.json  package.json  tsconfig.desktop.json  tsconfig.json
test/: README.md  phase1-peercred.sh  phase1.sh  phase2.sh  phase3.sh  phase4-ebpf.sh
(+138 files in other folders)
