[workspace]
members = [".", "audit-ebpf-ebpf", "audit-ebpf-common"]
resolver = "2"

[package]
name = "audit-ebpf"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "audit-ebpf"
path = "src/main.rs"

[dependencies]
aya = "0.13"
audit-ebpf-common = { path = "audit-ebpf-common" }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humantime = "2"

[patch.crates-io]
aya-obj = { path = "../../third_party/aya-obj-patched" }
